Service Client's Endpoint Update

--- a/HelloWebClient/Web.config
+++ b/HelloWebClient/Web.config
@@ -45,10 +45,10 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IHelloService1" />
+        <binding name="BasicHttpBinding_IHelloService" />
       </basicHttpBinding>
       <netTcpBinding>
-        <binding name="NetTcpBinding_IHelloService1">
+        <binding name="NetTcpBinding_IHelloService">
           <security>
             <transport sslProtocols="None" />
           </security>
@@ -57,11 +57,11 @@
     </bindings>
     <client>
       <endpoint address="http://localhost:8080/HelloService1" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_IHelloService1" contract="ServiceReference1.IHelloService1"
-        name="BasicHttpBinding_IHelloService1" />
+        bindingConfiguration="BasicHttpBinding_IHelloService" contract="ServiceReference1.IHelloService"
+        name="BasicHttpBinding_IHelloService" />
       <endpoint address="net.tcp://localhost:8090/HelloService1" binding="netTcpBinding"
-        bindingConfiguration="NetTcpBinding_IHelloService1" contract="ServiceReference1.IHelloService1"
-        name="NetTcpBinding_IHelloService1">
+        bindingConfiguration="NetTcpBinding_IHelloService" contract="ServiceReference1.IHelloService"
+        name="NetTcpBinding_IHelloService">
         <identity>
           <userPrincipalName value="mokha@fareast.corp.microsoft.com" />
         </identity>
